<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/img1"
            android:title="@string/option1" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/img1"
            android:title="@string/option2" />
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/img1"
            android:title="@string/option3" />

    </group>

    <item android:title="@string/my_profile">
        <menu>

            <item
                android:id="@+id/my_cart"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/my_cart" />
            <item
                android:id="@+id/my_account"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/my_account" />
        </menu>
    </item>

    <item android:title="@string/help_support">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/terms_conditions"
                android:title="@string/terms_conditions" />
            <item
                android:id="@+id/help_center"
                android:title="@string/help_center" />
        </menu>
    </item>
</menu>