<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey_light"
    android:layout_height="match_parent"

    tools:context="com.example.omarmohammedraafat.qasseda.DashBoard">
<LinearLayout
    android:id="@+id/activity_dash_board"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="اضافة  منشور جديد"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="المنشور...."
        android:id="@+id/editText" />
    <Button
        android:id="@+id/photoPickerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:text="اضغط هنا لاختيار صورة" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="اختر القسم"
        />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:orientation="vertical"
        >
    <RadioButton
        android:text= "@string/item_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/radioButton" />

    <RadioButton
        android:text="@string/item_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton2" />

    <RadioButton
        android:text="@string/item_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton3" />

    <RadioButton
        android:text="@string/item_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton4" />

    <RadioButton
        android:text="@string/item_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton5" />

    <RadioButton
        android:text="@string/item_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton6" />
        <RadioButton
            android:text="@string/item_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton7" />
    </RadioGroup>


    <Button
        android:text="نشر"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="post"/>
</LinearLayout>
</ScrollView>